--- a/ent-client2/src/main/resources/templates/pages/gestion-trombinoscope/dashboard-trombinoscope.html
+++ b/ent-client2/src/main/resources/templates/pages/gestion-trombinoscope/dashboard-trombinoscope.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Gestion des Horaires</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="../../vendors/feather/feather.css">
-    <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../vendors/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-    <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" type="../../text/css" href="js/select.dataTables.min.css">
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
-    <!-- endinject -->
-    <link rel="shortcut icon" href="../../images/favicon.png" />
-  </head>
-  
-<body>
 <head>
   <!-- Required meta tags -->
-  <th:block th:replace="fragments/_head.html::head"></th:block>
-<!--  <th:block th:replace="fragments/_modalsIntervention.html::modalsIntervention"></th:block>-->
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Gestion des Horaires</title>
+  <!-- plugins:css -->
+  <link rel="stylesheet" href="../../vendors/feather/feather.css">
+  <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+  <!-- endinject -->
+  <!-- Plugin css for this page -->
+  <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../vendors/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" type="../../text/css" href="js/select.dataTables.min.css">
+  <!-- End plugin css for this page -->
+  <!-- inject:css -->
+  <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
+  <!-- endinject -->
+  <link rel="shortcut icon" href="../../images/favicon.png" />
 </head>
+
+<body>
+
+  <head>
+    <!-- Required meta tags -->
+    <th:block th:replace="fragments/_head.html::head"></th:block>
+    <!--  <th:block th:replace="fragments/_modalsIntervention.html::modalsIntervention"></th:block>-->
+
+  </head>
   <div class="container-scroller">
 
     <!--_header-->
@@ -43,8 +44,12 @@
         <div id="theme-settings" class="settings-panel">
           <i class="settings-close ti-close"></i>
           <p class="settings-heading">SIDEBAR SKINS</p>
-          <div class="sidebar-bg-options selected" id="sidebar-light-theme"><div class="img-ss rounded-circle bg-light border mr-3"></div>Light</div>
-          <div class="sidebar-bg-options" id="sidebar-dark-theme"><div class="img-ss rounded-circle bg-dark border mr-3"></div>Dark</div>
+          <div class="sidebar-bg-options selected" id="sidebar-light-theme">
+            <div class="img-ss rounded-circle bg-light border mr-3"></div>Light
+          </div>
+          <div class="sidebar-bg-options" id="sidebar-dark-theme">
+            <div class="img-ss rounded-circle bg-dark border mr-3"></div>Dark
+          </div>
           <p class="settings-heading mt-2">HEADER SKINS</p>
           <div class="color-tiles mx-0 px-4">
             <div class="tiles success"></div>
@@ -62,81 +67,36 @@
       <!-- partial:partials/_sidebar.html -->
       <th:block th:replace="/fragments/_navTrombinoscope.html::navTrombinoscope"></th:block>
       <div class="main-panel">
+
         <div class="content-wrapper">
-          <div class="row">
-            <!-- Sélecteur de population -->
-            <div class="col">
-              <div class="form-group">
-                <label for="population">Population</label>
-                <select class="form-control" id="population">
-                  <option value="">Personnel</option>
-                  <option value="">Etudiant</option>
-                  <option value="">Doctorant</option>
-                  <option value="*">Tous</option>
-                </select>
-              </div>
-            </div>
-
-            <!-- Champ pour le nom -->
-            <div class="col">
-              <div class="form-group">
-                <label for="nom">Nom</label>
-                <input type="text" class="form-control" id="nom">
-              </div>
-            </div>
-
-            <!-- Champ pour le prénom -->
-            <div class="col">
-              <div class="form-group">
-                <label for="prenom">Prénom</label>
-                <input type="text" class="form-control" id="prenom">
-              </div>
-            </div>
+          <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
+            </li>
+          </ul>
+          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
           </div>
-          <div class="row">
-            <!-- Champ pour le service -->
-            <div class="col">
-              <div class="form-group">
-                <label for="population">Service</label>
-                <select class="form-control" id="service">
-                  <option>Option 1</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <!-- Champ pour le bureau -->
-            <div class="col">
-              <div class="form-group">
-                <label for="prenom">Bureau</label>
-                <input type="text" class="form-control" id="bureau">
-              </div>
-            </div>
-          </div>
-          <button type="button" class="btn btn-primary">Primary</button>
-          <button type="button" class="btn btn-secondary">Secondary</button>
-          </div>
-
-
         </div>
-      <!-- partial:partials/_footer.html -->
-<!--      <footer class="footer">-->
-<!--        <div class="d-sm-flex justify-content-center justify-content-sm-between">-->
-<!--          <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2024.  Client Web ING4-ISI <a href="https://www.institutsaintjean.org/" target="_blank">ISJ-ENT.</a> All rights reserved.</span>-->
-<!--          <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made by Wafo Aristide With <i class="ti-heart text-danger ml-1"></i></span>-->
-<!--        </div>-->
-<!--      </footer>-->
-        <!-- content-wrapper ends -->
-        <!-- partial -->
       </div>
-      <!-- main-panel ends -->
     </div>
-    <!-- page-body-wrapper ends -->
+    <!-- main-panel ends -->
+  </div>
+  <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
 
   <!-- plugins:js -->
   <script src="../../vendors/js/vendor.bundle.base.js"></script>
+  <script src="../../vendors/bootstrap/js/bootstrap.min.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
@@ -146,28 +106,27 @@
   <script src="../../js/template.js"></script>
   <script src="../../js/settings.js"></script>
   <script src="../../js/todolist.js"></script>
-  
+
   <!-- endinject -->
   <!-- Custom js for this page-->
   <!-- End custom js for this page-->
 
 
 
- <!-- plugins:js -->
- <!-- endinject -->
- <!-- Plugin js for this page -->
- <script src="../../vendors/chart.js/Chart.min.js"></script>
- <script src="../../vendors/datatables.net/jquery.dataTables.js"></script>
- <script src="../../vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
- <script src="js/dataTables.select.min.js"></script>
+  <!-- plugins:js -->
+  <!-- endinject -->
+  <!-- Plugin js for this page -->
+  <script src="../../vendors/chart.js/Chart.min.js"></script>
+  <script src="../../vendors/datatables.net/jquery.dataTables.js"></script>
+  <script src="../../vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+  <script src="js/dataTables.select.min.js"></script>
 
- <!-- endinject -->
- <!-- Custom js for this page-->
- <script src="../../js/dashboard.js"></script>
- <script src="../../js/Chart.roundedBarCharts.js"></script>
+  <!-- endinject -->
+  <!-- Custom js for this page-->
+  <script src="../../js/dashboard.js"></script>
+  <script src="../../js/Chart.roundedBarCharts.js"></script>
 
 
 </body>
 
 </html>
-
