--- a/ent-client2/src/main/resources/templates/fragments/_navTrombinoscope.html
+++ b/ent-client2/src/main/resources/templates/fragments/_navTrombinoscope.html
@@ -17,7 +17,7 @@
                     <span class="menu-title">Trombinoscope</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                     <i class="bi bi-mortarboard-fill menu-icon"></i>
                     <span class="menu-title">Informations</span>
@@ -29,7 +29,7 @@
                         <li class="nav-item"> <a class="nav-link" th:href="@{/trombinoscope/information/personnel}">Personnel</a></li>
                     </ul>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </nav>
     <!-- partial -->
