--- a/ent-client2/src/main/resources/templates/fragments/_navGestInt.html
+++ b/ent-client2/src/main/resources/templates/fragments/_navGestInt.html
@@ -35,9 +35,7 @@
         </a>
         <div class="collapse" id="ui-basic">
           <ul class="nav flex-column sub-menu">
-            <!--            <li class="nav-item"> <a class="nav-link" href="#" data-toggle="modal" data-target="#demanderinterventionModal">Demander</a></li>-->
-            <li class="nav-item"> <a class="nav-link" th:href="@{listeInterventionParDepartement}">Departement</a></li>
-            <li class="nav-item"> <a class="nav-link" th:href="@{listeintervention}">Personnelle</a></li>
+            <li class="nav-item"> <a class="nav-link" th:href="@{listeInterventionParDepartement}">Interventions</a></li>
           </ul>
         </div>
       </li>
